--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -1,7 +1,6 @@
 <script>
 
-    /* const socket = io() */
-
+    const socket = io() 
     /* Agrego evento en boton guardar para cargar producto nuevo */
     let botonGuardar = document.getElementById('btnGuardar')
         botonGuardar.addEventListener('click', (e)=>{
@@ -44,59 +43,59 @@
         document.getElementById('tbody').innerHTML = str
     });
 
-    /* Escucho los mensajes del chat */
-    socket.on("messages", chat => {
-        const html = chat.map(message => {
-            return (`
-            <p>
-                <strong>${message.author.alias}</strong> <span>[${message.author.email}]</span> :  <i>${message.text}</i>
-            </p>
-            `);
-        }).join(" ")
-        document.getElementById("chatMessages").innerHTML = html;
-        document.getElementById("newMessage").focus()
-         document.getElementById("newMessage").value = ""
-    })
+    // /* Escucho los mensajes del chat */
+    // socket.on("messages", chat => {
+    //     const html = chat.map(message => {
+    //         return (`
+    //         <p>
+    //             <strong>${message.author.alias}</strong> <span>[${message.author.email}]</span> :  <i>${message.text}</i>
+    //         </p>
+    //         `);
+    //     }).join(" ")
+    //     document.getElementById("chatMessages").innerHTML = html;
+    //     document.getElementById("newMessage").focus()
+    //      document.getElementById("newMessage").value = ""
+    // })
 
-    /* Funcion para agregar mensaje al chat */
-    const addMessage = () => {
-        const email = document.getElementById("userEmail").value
-        const nombre = document.getElementById("nombre").value
-        const apellido = document.getElementById("apellido").value
-        const edad = document.getElementById("edad").value
-        const alias = document.getElementById("alias").value
-        const text =  document.getElementById("newMessage").value
-        //const today = new Date();
-        if(email === ''){
-            document.getElementById("userEmail").placeholder = 'Debe ingresar su email'
-        }else{
-            if(nombre === ''){
-            document.getElementById("nombre").placeholder = 'Debe ingresar su nombre'
-        }else{
-            if(apellido === ''){
-            document.getElementById("apellido").placeholder = 'Debe ingresar su apellido'
-        }else{
-            if(edad === ''){
-            document.getElementById("edad").placeholder = 'Debe ingresar su edad'
-        }else{
-            if(alias === ''){
-            document.getElementById("alias").placeholder = 'Debe ingresar su alias'
-        }else{
-            //const now = today.toLocaleString();
-            const message = {
-                    author: {
-                        email: email,
-                        nombre: nombre,
-                        apellido: apellido,
-                        edad: edad,
-                        alias: alias
-                    },
-                    //date: now,
-                    text: text
-            };
-            /* Envio nuevo mensaje al chat */
-            socket.emit('newMessage', message);
-            console.log(message)
-        }}}}}}
+    // /* Funcion para agregar mensaje al chat */
+    // const addMessage = () => {
+    //     const email = document.getElementById("userEmail").value
+    //     const nombre = document.getElementById("nombre").value
+    //     const apellido = document.getElementById("apellido").value
+    //     const edad = document.getElementById("edad").value
+    //     const alias = document.getElementById("alias").value
+    //     const text =  document.getElementById("newMessage").value
+    //     //const today = new Date();
+    //     if(email === ''){
+    //         document.getElementById("userEmail").placeholder = 'Debe ingresar su email'
+    //     }else{
+    //         if(nombre === ''){
+    //         document.getElementById("nombre").placeholder = 'Debe ingresar su nombre'
+    //     }else{
+    //         if(apellido === ''){
+    //         document.getElementById("apellido").placeholder = 'Debe ingresar su apellido'
+    //     }else{
+    //         if(edad === ''){
+    //         document.getElementById("edad").placeholder = 'Debe ingresar su edad'
+    //     }else{
+    //         if(alias === ''){
+    //         document.getElementById("alias").placeholder = 'Debe ingresar su alias'
+    //     }else{
+    //         //const now = today.toLocaleString();
+    //         const message = {
+    //                 author: {
+    //                     email: email,
+    //                     nombre: nombre,
+    //                     apellido: apellido,
+    //                     edad: edad,
+    //                     alias: alias
+    //                 },
+    //                 //date: now,
+    //                 text: text
+    //         };
+    //         /* Envio nuevo mensaje al chat */
+    //         socket.emit('newMessage', message);
+    //         console.log(message)
+    //     }}}}}}
 
 </script>
