--- a/views/pages/addProduct.ejs
+++ b/views/pages/addProduct.ejs
@@ -1,17 +1,12 @@
 <!doctype html>
 <html lang="es">
     <head>
+        <%-include('../partials/head.ejs')%>
     </head>
 
     <body>
-        <div class="alert alert-info" style=" display: flex " role="alert">
-            <span >Estas deslogueado <%= nombre %>, se te redirige al login </span>
-        </div>
+        <%-include('../partials/navbar.ejs')%>
+        <%-include('../partials/form.ejs')%>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
-    <script>
-        setTimeout(() => {
-            location.href = '/login'
-        }, 2000)
-    </script>
 </html>
