--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ecommerce</a>
+        <a class="navbar-brand" href="/home">Trabajo final Backend</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,11 +17,9 @@
                     <a class="nav-link <% if(active == 'cart'){ %> active <% } %> %>" href="/cart">Carrito</a>
                 </li>
 
-                <li class="nav-item <% if(active == 'profile'){ %> active <% } %>">
-                    <a class="nav-link" href="/profile">Perfil</a>
+                <li class="nav-item">
+                    <button type="button" class="btn btn-warning" onclick="location.href='/logout'">Log out</button>
                 </li>
-
-                
 
             </ul>
         </div>
