--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -22,7 +22,7 @@
             <button id="btnLogin" class="btn btn-success">Login</button>
         </form>
         <br/>
-        <button id="btnGoToRegister" class="btn btn-success" onclick="location.href='/register'">Cree una cuenta</button>
+        <button id="btnGoToRegister" class="btn btn-success" onclick="location.href='/register'">Crear una cuenta</button>
     </div>
 
         
